--- a/morr_client/Packages/manifest.json
+++ b/morr_client/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-	"com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.unity.2d.animation": "5.2.2",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.3.0",
@@ -9,6 +9,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.18.19",
     "com.unity.collab-proxy": "1.15.18",
+    "com.unity.device-simulator": "3.0.3-preview",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
